--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="start-button">Start/Pause</button>
 
 
-    <div class="grid">
+    <div class="grid2">
       <div></div><div></div><div></div><div></div><div></div>
       <div></div><div></div><div></div><div></div><div></div>
       <div></div><div></div><div></div><div></div><div></div>
