--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
       <div></div><div></div><div></div><div></div><div></div>
       <div></div><div></div><div></div><div></div><div></div>
 
+    <div class = 'taken'></div>      <div class = 'taken'></div>
+    <div class = 'taken'></div>      <div class = 'taken'></div>
+    <div class = 'taken'></div>      <div class = 'taken'></div>
+    <div class = 'taken'></div>      <div class = 'taken'></div>
+    <div class = 'taken'></div>      <div class = 'taken'></div>
+
 
 
 
