added mini-grid div
they will show the next piece to go on board

--- a/index.html
+++ b/index.html
@@ -66,11 +66,13 @@
     <div class = 'taken'></div>      <div class = 'taken'></div>
     <div class = 'taken'></div>      <div class = 'taken'></div>
 
-
-
-
-
-
+    </div>
+    
+    <div class = 'minigrid'>
+      <div></div><div></div><div></div><div></div>
+      <div></div><div></div><div></div><div></div>
+      <div></div><div></div><div></div><div></div>
+      <div></div><div></div><div></div><div></div>
     </div>
   </body>
 </html>
