--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h2>Score:<span  id="score">0</span></h3>
-    <button id="start-button">Start/Pause</button>
+    <button id="startButton">Start/Pause</button>
 
     <div class = 'container'>
       <div class="grid">
