added border class to grid divs

--- a/index.html
+++ b/index.html
@@ -12,53 +12,54 @@
 
     <div class = 'container'>
       <div class="grid">
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
 
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
+                <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
 
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
 
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
 
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
 
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
 
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
 
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
 
       <div class = 'taken'></div>      <div class = 'taken'></div>
       <div class = 'taken'></div>      <div class = 'taken'></div>
