--- a/index.html
+++ b/index.html
@@ -13,12 +13,6 @@
     <div class = 'container'>
       <div class="grid">
 
-                <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
-        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
-        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
-        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
-        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
-
         <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
         <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
         <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
@@ -61,11 +55,22 @@
         <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
         <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
 
-      <div class = 'taken'></div>      <div class = 'taken'></div>
-      <div class = 'taken'></div>      <div class = 'taken'></div>
-      <div class = 'taken'></div>      <div class = 'taken'></div>
-      <div class = 'taken'></div>      <div class = 'taken'></div>
-      <div class = 'taken'></div>      <div class = 'taken'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div class = 'border'><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+
+        <div class = 'taken noBorder'></div>
+        <div class = 'taken noBorder'></div>
+        <div class = 'taken noBorder'></div>
+        <div class = 'taken noBorder'></div>
+        <div class = 'taken noBorder'></div>
+        <div class = 'taken noBorder'></div>
+        <div class = 'taken noBorder'></div>
+        <div class = 'taken noBorder'></div>
+        <div class = 'taken noBorder'></div>
+        <div class = 'taken noBorder'></div>
 
       </div>
 
