--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
       </div>
 
       <div class = 'minigrid'>
-        <div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div>
+        <div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
+        <div class = 'border'></div><div class = 'border'></div><div class = 'border'></div><div class = 'border'></div>
       </div>
     </div>
   </body>
