--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h2>Score:<span  id="score">0</span></h3>
     <button id="startButton">Start/Pause</button>
+    <button id="resetButton">Reset Game</button>
 
     <div class = 'container'>
       <div class="grid">
