added brief explanation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Tetris Game!</title>
   </head>
   <body>
-    <h2>Score:<span  id="score">0</span></h3>
+     <h2>Game is over when pieces reach the top!</h2>
+    <h3>Score:<span  id="score">0</span></h3>
     <button id="startButton">Start/Pause</button>
     <button id="resetButton">Reset Game</button>
 
